examples/bad/toomanyarguments.hid
/* Program will end with an error caused by trying to pass too many arguments to a function */

declare 2plus(declare a){
  declare 2;
  2 = ^^2;
  return 2 + a;
}

declare 3;
3 = ^^^3;
print 2plus(3, 3);
